--- a/02_assignments/assignment_1.ipynb
+++ b/02_assignments/assignment_1.ipynb
@@ -60,12 +60,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This is a function, which we will learn more about next week. For testing purposes, we will write our code in the function\n",
-    "def anagram_checker(word_a, word_b):\n",
-    "  # Your code here\n",
-    "\n",
+    "def anagram_checker(word1, word2):\n",
+    "     \n",
+    "    # Force lowercase\n",
+    "    w1 = str.lower(word1)\n",
+    "    w2 = str.lower(word2)\n",
+    "    #Evaluate if anagram using sort function\n",
+    "    return(sorted(w1)== sorted(w2))\n",
+    "     \n",
+    "         \n",
     "# Run your code to check using the words below:\n",
-    "anagram_checker(\"Slient\", \"listen\")"
+    "anagram_checker(\"Slient\", \"listen\") # True"
    ]
   },
   {
@@ -74,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anagram_checker(\"Slient\", \"Night\")"
+    "anagram_checker(\"Slient\", \"Night\") # False"
    ]
   },
   {
@@ -83,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anagram_checker(\"night\", \"Thing\")"
+    "anagram_checker(\"night\", \"Thing\") # True"
    ]
   },
   {
@@ -101,8 +106,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def anagram_checker(word_a, word_b, is_case_sensitive):\n",
-    "  # Modify your existing code here\n",
+    "def anagram_checker(word1, word2, is_case_sensitive):\n",
+    "  # Split between Case & Non Case sensitive\n",
+    "  if is_case_sensitive == True:\n",
+    "    #Evaluate if anagram using sort function, case sensitive\n",
+    "    return(sorted(word1)== sorted(word2))\n",
+    "  \n",
+    "  else:\n",
+    "    \n",
+    "    # Force lowercase\n",
+    "    w1 = str.lower(word1)\n",
+    "    w2 = str.lower(word2)\n",
+    "    #Evaluate if anagram using sort function\n",
+    "    return(sorted(w1)== sorted(w2))\n",
+    "    \n",
     "\n",
     "# Run your code to check using the words below:\n",
     "anagram_checker(\"Slient\", \"listen\", False) # True"
