--- a/02_assignments/assignment_2.ipynb
+++ b/02_assignments/assignment_2.ipynb
@@ -96,10 +96,25 @@
       },
       "outputs": [],
       "source": [
+        "all_paths = [\n",
+        "  \"../05_data/assignment_2_data/inflammation_01.csv\",\n",
+        "  \"../05_data/assignment_2_data/inflammation_02.csv\",\n",
+        "  \"../05_data/assignment_2_data/inflammation_03.csv\",\n",
+        "  \"../05_data/assignment_2_data/inflammation_04.csv\",\n",
+        "  \"../05_data/assignment_2_data/inflammation_05.csv\",\n",
+        "  \"../05_data/assignment_2_data/inflammation_06.csv\",\n",
+        "  \"../05_data/assignment_2_data/inflammation_07.csv\",\n",
+        "  \"../05_data/assignment_2_data/inflammation_08.csv\",\n",
+        "  \"../05_data/assignment_2_data/inflammation_09.csv\",\n",
+        "  \"../05_data/assignment_2_data/inflammation_10.csv\",\n",
+        "  \"../05_data/assignment_2_data/inflammation_11.csv\",\n",
+        "  \"../05_data/assignment_2_data/inflammation_12.csv\",\n",
+        "]\n",
+        "\n",
         "with open(all_paths[0], 'r') as f:\n",
-        "    # YOUR CODE HERE: Use the readline() or readlines() method to read the .csv file into 'contents'\n",
-        "    \n",
-        "    # YOUR CODE HERE: Iterate through 'contents' using a for loop and print each row for inspection"
+        "  # YOUR CODE HERE: Use the readlines() method to read the .csv file into 'contents'\n",
+        "  s = f.readlines()\n",
+        "  print(s)\n"
       ]
     },
     {
@@ -140,6 +155,7 @@
       "outputs": [],
       "source": [
         "import numpy as np\n",
+        "import numpy as np\n",
         "\n",
         "def patient_summary(file_path, operation):\n",
         "    # load the data from the file\n",
@@ -148,19 +164,20 @@
         "\n",
         "    # implement the specific operation based on the 'operation' argument\n",
         "    if operation == 'mean':\n",
+        "        np.mean(data,axis=ax)\n",
         "        # YOUR CODE HERE: calculate the mean (average) number of flare-ups for each patient\n",
         "\n",
         "    elif operation == 'max':\n",
         "        # YOUR CODE HERE: calculate the maximum number of flare-ups experienced by each patient\n",
-        "\n",
+        "        np.max(data,axis=ax)\n",
         "    elif operation == 'min':\n",
         "        # YOUR CODE HERE: calculate the minimum number of flare-ups experienced by each patient\n",
-        "\n",
+        "        np.min(data,axis=ax)\n",
         "    else:\n",
         "        # if the operation is not one of the expected values, raise an error\n",
         "        raise ValueError(\"Invalid operation. Please choose 'mean', 'max', or 'min'.\")\n",
         "\n",
-        "    return summary_values"
+        "    return data"
       ]
     },
     {
@@ -265,8 +282,12 @@
         "\n",
         "def detect_problems(file_path):\n",
         "  #YOUR CODE HERE: use patient_summary() to get the means and check_zeros() to check for zeros in the means\n",
+        "  mean_score = patient_summary(file_path, 'mean')\n",
         "\n",
-        "  return"
+        "  if check_zeros(mean_score):\n",
+        "    return True\n",
+        "  else:\n",
+        "    return False"
       ]
     },
     {
@@ -276,7 +297,7 @@
       "outputs": [],
       "source": [
         "# Test out your code here\n",
-        "# Your output for the first file should be False\n",
+        "# Your output for the first file should be True\n",
         "print(detect_problems(all_paths[0]))"
       ]
     },
@@ -331,7 +352,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.8"
+      "version": "3.9.15"
     }
   },
   "nbformat": 4,
